<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="grid_desc">tic tac toe grid</string>
    <string name="box_1">box 1</string>
    <string name="box_2">box 2</string>
    <string name="box_3">box 3</string>
    <string name="box_4">box 4</string>
    <string name="box_5">box 5</string>
    <string name="box_6">box 6</string>
    <string name="box_7">box 7</string>
    <string name="box_8">box 8</string>
    <string name="box_9">box 9</string>
    <string name="restart">Restart Game</string>
    <string name="statText">Os win:%1$d\t\t\tXs win:%2$d\t\t\tDraw:%3$d\n\n\t\tTotal Match:%4$d</string>
    <string name="match_drawn">Match was drawn</string>
    <string name="win_line">Winninng Line</string>
</resources>