<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/stat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginLeft="149dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="169dp"
        android:layout_marginRight="169dp"
        android:layout_marginBottom="84dp"
        android:alpha="0"
        android:onClick="restartGame"
        android:text="@string/restart"
        app:layout_constraintBottom_toTopOf="@+id/grid_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/win_line"
        android:layout_width="370dp"
        android:layout_height="370dp"
        android:alpha="0"
        android:contentDescription="@string/win_line"
        android:foregroundGravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restart"
        app:srcCompat="@drawable/line" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="370dp"
        android:layout_height="370dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/grid_300x300"
        android:contentDescription="@string/grid_desc"
        android:foregroundGravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:orientation="horizontal"
        app:useDefaultMargins="true">

        <ImageView
            android:id="@+id/box_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/box_1"
            android:onClick="ticTacToe"
            android:tag="1" />

        <ImageView
            android:id="@+id/box_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/box_2"
            android:onClick="ticTacToe"
            android:tag="2" />

        <ImageView
            android:id="@+id/box_3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/box_3"
            android:onClick="ticTacToe"
            android:tag="3" />

        <ImageView
            android:id="@+id/box_4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:contentDescription="@string/box_4"
            android:onClick="ticTacToe"
            android:tag="4"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/box_5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="22dp"
            android:contentDescription="@string/box_5"
            android:onClick="ticTacToe"
            android:tag="5"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/box_6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="22dp"
            android:contentDescription="@string/box_6"
            android:onClick="ticTacToe"
            android:tag="6" />

        <ImageView
            android:id="@+id/box_7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/box_7"
            android:onClick="ticTacToe"
            android:tag="7"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/box_8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/box_8"
            android:onClick="ticTacToe"
            android:tag="8" />

        <ImageView
            android:id="@+id/box_9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/box_9"
            android:onClick="ticTacToe"
            android:tag="9" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_layout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>